infra/deployment/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: phil-onion-watch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/evansbuycosansolis/dost-phil-onion-watch-api:v0.1.0-rc1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 20
          volumeMounts:
            - name: data-volume
              mountPath: /workspace/data
      volumes:
        - name: data-volume
          emptyDir: {}
